# CumulativeSymbolicThreshold

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CHECKUP_2026-02-22.md  CITATION.cff  CLAUDE.md  CLEANUP_REPORT.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Compensation_Zone_Viability_Debt_EN.docx  Dockerfile  LICENSE.md  LICENSING.md  Makefile  ORI-C_FIX_README.md  ORIC_POINT_OF_TRUTH.md  ORI_C_POINT_OF_TRUTH.md  README.md  README_APPLY.md  README_DEPLOY_NIGHTLY.md  REAL_DATA_WORKFLOWS_NOTE.md  REPRODUCE.md  SECURITY.md  WORKFLOWS_NOTES.md  article-accepter-vivant-en.html  article-accepter-vivant.html  article-climat-instable-en.html  article-climat-instable.html  article-demonstration-viabilite-en.html  article-demonstration-viabilite.html  article-dynamiques-seuil-en.html  article-dynamiques-seuil.html  article-logique-controle-en.html  article-logique-controle.html  article-matiere-organisable-en.html  article-matiere-organisable.html  article-refus-structurel-en.html  (+41 more)
.github/ISSUE_TEMPLATE/: bug_report.md  dataset_proposal.md
.github/workflows/: ci.yml  collector.yml  full_statistical.yml  independent_replication.yml  manual_runs.yml  nightly.yml  nightly_isolated.yml  oric_nightly_real_data.yml  oric_update_real_data.yml  qcc_brisbane_stateprob_pipeline.yml  qcc_canonical_full.yml  qcc_polaron_real_smoke.yml  qcc_real_data_smoke.yml  qcc_stateprob_bootstrap.yml  qcc_stateprob_cross_conditions.yml  qcc_stateprob_densify_stability.yml  real_canonical_schedule.yml  real_data_annual_suite.yml  real_data_canonical_T1_T8.yml  real_data_custom_canonical_T1_T8.yml  real_data_long_cpi_monthly.yml  real_data_long_custom.yml  real_data_matrix.yml  real_data_max_push_T1_T8.yml  real_data_smoke.yml  real_data_smoke_custom.yml  real_data_smoke_economie.yml  real_data_smoke_energie.yml  real_data_smoke_meteo.yml  real_data_smoke_pilot_cpi_monthly.yml  real_data_smoke_trafic.yml  real_data_suite_max_demo.yml  real_smoke_matrix.yml  repair_ci_metrics.yml  sector_ai_tech_suite.yml  sector_bio.yml  sector_bio_suite.yml  sector_climate_suite.yml  sector_cosmo.yml  sector_cosmo_suite.yml  (+10 more)
.github/workflows_disabled/: README.md  full_statistical.yml  independent_replication.yml  manual_runs.yml  nightly_isolated.yml  qcc_brisbane_stateprob_pipeline.yml  qcc_polaron_real_smoke.yml  real_canonical_schedule.yml  real_data_matrix.yml  real_data_smoke.yml  sector_cosmo_suite.yml  sector_finance_suite.yml  sector_infra.yml  sector_infra_cloud_suite.yml  sector_infra_suite.yml  symbolic_suite.yml  t9_diagnostics.yml
01_Theory/: ORI_C_application_taxonomy.md  README.md  glossary_variables.md  option_b_non_circularity.md  theory_core.md  threshold_rationale.md
02_Protocol/: DECISION_PROTOCOL_v1.md  DECISION_RULES_v1.md  DECISION_RULES_v2.md  INTERVENTIONS_CATALOG.md  NEURO_EXTENSION_v1.md  ORI_C_Testable_au_Scalpel_v1_0.md  PREREG_TEMPLATE.md  PROTOCOLE_FALSIFIABILITE_ORI-C.docx  PROTOCOL_v1.md  README.md  README_PROTOCOL_INDEX.md
03_Data/: N_seaice_extent_daily_v4.0.csv  README.md  REAL_DATA_COLLECTION_PROTOCOL.md  S_seaice_extent_daily_v4.0.csv  data_dictionary.md  ecology_pelt_real_oric_robustz.csv  ecology_pelt_source.csv  inclusion_exclusion.md
03_Data/real/: README_REAL_DATA_SECTORS.md
03_Data/synthetic/: synthetic_example.csv  synthetic_long_annual.csv  synthetic_long_annual_no_thr.csv  synthetic_minimal.csv  synthetic_test6_s_star.csv  (+2 more)
04_Code/: README.md  environment.yml  requirements.txt  seeds_and_repro.md
05_Results/: FULL_REAL_DATA_REPORT.md  PILOT_GENERALIZATION_REPORT.md  README.md  pilot_benchmark_summary.json
06_Manuscript/: README.md  appendix_methods.md  manuscript.md
Articles/: README.md
ci_metrics/: README.md  history.csv  repair_report.json  runs_index.csv  runs_index_repaired.csv
contracts/: CALIBRATION_FREEZE.json  DUAL_PROOF_CONTRACT.json  FINAL_STATUS_SCHEMA.json  FROZEN_PARAMS.json  FROZEN_PILOT_CORPUS.json  GENERALIZATION_BENCHMARK.json  PILOT_GENERALIZATION.json  PLAN_SCHEMA.json  POWER_CRITERIA.json  POWER_UPGRADE_PROTOCOL.json  PROOF_PACKAGE_SCHEMA.json  PROXY_SENSITIVITY.json  README.md  SHOWCASE_PILOTS.json  STABILITY_CRITERIA.json  SYNTHETIC_GATE_CONTRACT.json  VALIDATION_BENCHMARK.json  VALIDATION_DECIDABILITY.json  VALIDATION_PRECHECKS.json  VALIDATION_PROTOCOL_CONTRACT.json  VALIDATION_SPECIFICITY.json
data/: README.md  real_datasets_index.csv
data/qcc/: README.md
docs/: CI_PIPELINES.md  CLOSURE_PACK.md  FINALIZATION.md  INDEX.md  ORI_C_POINT_OF_TRUTH.md  REPLICATION_PROTOCOL.md  REPO_LAYOUT.md  REPRODUCE.md  SYMBOLIC_TESTS.md  T9_DIAGNOSTICS.md  VALIDATION_CANONICAL_REPORT.md  canonical_proof.md  framework_status.md  generalization_pilots.md  hologramme-vivant-3d.html  index.md  installation.md  limitations_power.md
examples/: notebook_01_synthetic_demo.ipynb  notebook_02_real_data_pilot.ipynb  notebook_03_robustness_analysis.ipynb
requirements/: README.md
scripts/: build_real_from_local.py  check_bundle_integrity.py  fetch_eurostat_monthly.py  fetch_fred_monthly.py  fetch_new_real_datasets.py  generate_fred_report_pdf.py  generate_full_audit_report.py  resolve_real_datasets.py  run_all.py  run_all_tests.py  run_brisbane_stateprob_pipeline.py  validate_proxy_spec.py
tools/: README.md  _qcc_cross_argparse_compat.py  audit_artifact_consistency.py  collect_ci_metrics.py  collector_download_artifacts.py  collector_download_artifacts_runlist.py  disable_noisy_workflows.py  disable_workflows.py  enforce_output_contract.py  generate_brisbane_stateprob.py  make_manifest.py  power_upgrade.py  qcc_checks.py  qcc_real_data_from_runs_index.py  qcc_require_stability_criteria.py  qcc_stage_stability_criteria.py  qcc_stateprob_bootstrap.py  qcc_stateprob_checks.py  qcc_stateprob_cross_checks.py  qcc_stateprob_cross_conditions.py  qcc_stateprob_cross_conditions_compat.py  qcc_stateprob_pooling.py  qcc_stateprob_stability_battery.py  qcc_stateprob_write_manifest.py  repair_ci_metrics.py  replicate.py  repo_doctor.py  run_real_smoke_matrix.py  run_scan_only.py  stage_contracts.py  verify_audit_invariants.py
(+747 files in other folders)
