[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oric"
version = "1.3.0"
description = "Cumulative Symbolic Threshold — A falsifiable protocol for O·R·I dynamics"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Didier Daloze", email = "contact@ori-c.be"}
]
keywords = [
    "symbolic-threshold", "viability", "phase-transition",
    "falsifiable", "ORI-C", "cumulative-regime", "dissipative-systems"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "statsmodels>=0.14",
    "scikit-learn>=1.3",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "mypy>=1.5",
]
notebooks = [
    "jupyter>=1.0",
    "jupyterlab>=4.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]
all = ["oric[dev,notebooks,docs]"]

[project.scripts]
oric-run-all = "oric._entrypoints:run_all"
oric-run-tests = "oric._entrypoints:run_all_tests"

[project.urls]
Homepage = "https://www.ori-c.be"
Repository = "https://github.com/dalozedidier-dot/CumulativeSymbolicThreshold"
Documentation = "https://www.ori-c.be/ori-c-recherche.html"
"OSF Pre-registration" = "https://osf.io/g62pz/"
"Bug Tracker" = "https://github.com/dalozedidier-dot/CumulativeSymbolicThreshold/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
oric = ["py.typed"]

# ── Ruff (replaces flake8 + black + isort) ─────────────
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
extend-ignore = ["E731"]

[tool.ruff.lint.per-file-ignores]
"src/oric/__init__.py" = ["F401", "F403"]
"04_Code/tests/*.py" = ["E402"]          # sys.path manipulation before imports
"04_Code/tests/test_did_sc.py" = ["E501"]
"04_Code/tests/test_oos_panel.py" = ["E741"]
"04_Code/tests/test_e2e_pipeline.py" = ["E501"]

# ── Type checking ───────────────────────────────────────
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false     # progressive — set true later

# ── Testing ─────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["src/oric/tests", "04_Code/tests", "tools"]
addopts = "-q --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

# ── Coverage ────────────────────────────────────────────
[tool.coverage.run]
source = ["src/oric"]
omit = ["*/tests/*", "*/examples/*"]

[tool.coverage.report]
show_missing = true
